sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:11: error: ')' expected but $XMLSTART$< found.
  if (BLEU <BLANC) return;
           ^DutchFlagAlgo:32: error: illegal start of simple expression
} 
^